test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingressclass.kubernetes.io/is-default-class: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: helm-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: hemltest.soldout.co.kr
    http:
      paths:
      - backend:
          service:
            name: hello-helm
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: helmtest.soldout.co.kr
    http:
      paths:
      - backend:
          service:
            name: soldout-test
            port:
              number: 80
        path: /
        pathType: Prefix        
  tls:
   - secretName: helm-test-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingressclass.kubernetes.io/is-default-class: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: dev-rebbitmq-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: test-rbq.soldout.co.kr
    http:
      paths:
      - backend:
          service:
            name: rabbitmq
            port:
              number: 15672
        path: /
        pathType: Prefix
  tls:
   - secretName: helm-test-tls

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingressclass.kubernetes.io/is-default-class: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: dev-rebbitmq-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: test-rbq.soldout.co.kr
    http:
      paths:
      - backend:
          service:
            name: rabbitmq
            port:
              number: 15672
        path: /
        pathType: Prefix
  tls:
   - secretName: helm-test-tls
