test/svc-test.yaml
### trade service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soldout-test
  namespace: dev
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: soldout-test
